--- a/airline/css/style.css
+++ b/airline/css/style.css
@@ -571,7 +571,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #call-to-action {
-  background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
+  background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/call.jpeg) fixed center center;
   background-size: cover;
   padding: 140px 0 60px 0;
 }
@@ -611,285 +611,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #call-to-action .cta-btn:hover {
   background: #3ac8cd;
   border: 2px solid #3ac8cd;
-}
-
-/* Call To Action Section
---------------------------------*/
-
-#skills {
- padding: 60px 0;
- background: url("../img/we-outstand-with.jpg") left top no-repeat;
-}
-
-#skills .progress {
-  height: 35px;
-  margin-bottom: 15px;
-  margin-left:50px;
-  
-}
-
-#skills .progress .skill {
-  font-family: "Open Sans", sans-serif;
-  line-height: 35px;
-  padding: 0;
-  margin: 0 0 0 20px;
-  text-transform: uppercase;
-}
-
-#skills .progress .skill .val {
-  float: right;
-  font-style: normal;
-  margin: 0 20px 0 0;
-}
-
-#skills .progress-bar {
-  width: 1px;
-  text-align: left;
-  transition: .9s;
-}
-
-/* Facts Section
---------------------------------*/
-
-#facts {
-  background: url("../img/facts-bg.jpg") center top no-repeat fixed;
-  background-size: cover;
-  padding: 60px 0 0 0;
-  position: relative;
-}
-
-#facts::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: rgba(255, 255, 255, 0.88);
-  z-index: 9;
-}
-
-#facts .container {
-  position: relative;
-  z-index: 10;
-}
-
-#facts .counters span {
-  font-family: "Open Sans", sans-serif;
-  font-weight: bold;
-  font-size: 48px;
-  display: block;
-  color: #3ac8cd;
-}
-
-#facts .counters p {
-  padding: 0;
-  margin: 0 0 20px 0;
-  font-family: "Open Sans", sans-serif;
-  font-size: 14px;
-  color: #111;
-}
-
-#facts .facts-img {
-  text-align: center;
-  padding-top: 30px;
-}
-/* Clients Section
---------------------------------*/
-
-#clients {
-  padding: 60px 0;
-}
-
-#clients img {
-  max-width: 100%;
-  opacity: 0.5;
-  transition: 0.3s;
-  padding: 15px 0;
-}
-
-#clients img:hover {
-  opacity: 1;
-}
-
-#clients .owl-nav,
-#clients .owl-dots {
-  margin-top: 5px;
-  text-align: center;
-}
-
-#clients .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
-
-#clients .owl-dot.active {
-  background-color: #3ac8cd;
-}
-
-/* Testimonials Section
---------------------------------*/
-
-#testimonials {
-  padding: 60px 0;
-}
-
-#testimonials .section-header {
-  margin-bottom: 40px;
-}
-
-#testimonials .testimonial-item {
-  text-align: center;
-}
-
-#testimonials .testimonial-item .testimonial-img {
-  width: 120px;
-  border-radius: 50%;
-  border: 4px solid #fff;
-  margin: 0 auto;
-}
-
-#testimonials .testimonial-item h3 {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 10px 0 5px 0;
-  color: #111;
-}
-
-#testimonials .testimonial-item h4 {
-  font-size: 14px;
-  color: #999;
-  margin: 0 0 15px 0;
-}
-
-#testimonials .testimonial-item .quote-sign-left {
-  margin-top: -15px;
-  padding-right: 10px;
-  display: inline-block;
-  width: 37px;
-}
-
-#testimonials .testimonial-item .quote-sign-right {
-  margin-bottom: -15px;
-  padding-left: 10px;
-  display: inline-block;
-  max-width: 100%;
-  width: 37px;
-}
-
-#testimonials .testimonial-item p {
-  font-style: italic;
-  margin: 0 auto 15px auto;
-}
-
-#testimonials .owl-nav,
-#testimonials .owl-dots {
-  margin-top: 5px;
-  text-align: center;
-}
-
-#testimonials .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
-
-#testimonials .owl-dot.active {
-  background-color: #3ac8cd;
-}
-
-/* Team Section
---------------------------------*/
-
-#team {
-  background: #fff;
-  padding: 60px 0;
-}
-
-#team .member {
-  text-align: center;
-  margin-bottom: 20px;
-  background: #000;
-  position: relative;
-}
-
-#team .member .member-info {
-  opacity: 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  transition: 0.2s;
-}
-
-#team .member .member-info-content {
-  margin-top: -50px;
-  transition: margin 0.2s;
-}
-
-#team .member:hover .member-info {
-  background: rgba(0, 0, 0, 0.7);
-  opacity: 1;
-  transition: 0.4s;
-}
-
-#team .member:hover .member-info-content {
-  margin-top: 0;
-  transition: margin 0.4s;
-}
-
-#team .member h4 {
-  font-weight: 700;
-  margin-bottom: 2px;
-  font-size: 18px;
-  color: #fff;
-}
-
-#team .member span {
-  font-style: italic;
-  display: block;
-  font-size: 13px;
-  color: #fff;
-}
-
-#team .member .social {
-  margin-top: 15px;
-}
-
-#team .member .social a {
-  transition: none;
-  color: #fff;
-}
-
-#team .member .social a:hover {
-  color: #3ac8cd;
-}
-
-#team .member .social i {
-  font-size: 18px;
-  margin: 0 2px;
-}
-
+} 
 /* Contact Section
 --------------------------------*/
 #contact .contact-info {
@@ -1070,150 +792,21 @@ body.mobile-nav-active #mobile-nav-toggle {
     display: inline;
   }
 }
-/*Client Testimonial*/
-.testimonial-area {
-    padding: 50px 13px;
-    position: relative;
-    background-position: center;
-    background-color: #F0F0F0;
-}
-.testimonial-area:before {
-  position: absolute;
-  content: '';
-}
-.client-container {
-    margin-right: -15px;
-    margin-left: -15px;
-}
-.client-container:before{
-  content: '';
-  display: table;
-}
-@media (min-width: 992px) 
-.col-md-8 {
-    width: 58.33333333%;
-}
-.header-testi {
-    position: relative;
-    margin-bottom: 25px;
-    padding: 0 0 10px;
-    border-bottom: 1px #e2e2e2 solid;
-    text-align: center;
-}
-.header-testi:before {
-    position: absolute;
-    bottom: -3px;
-    left: 20px;
-    width: 35px;
-    height: 5px;
-    content: "";
-    display: inline-block;
-}
-.header-testi:after {
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 80px;
-    height: 1px;
-    content: "";
-    display: inline-block;
-}
-.item {
-  padding: 5px;
-}
-.single-testimonal{
-  position: relative;
-  z-index: 4;
-  overflow: hidden;
-  margin: 0 15px;
-  padding: 8px;
-  background: #E9E9E9;
-  transition: all 0.2s ease-in-out;
-}
-.img-area{
-  position: relative;
-  z-index: 2;
-  float: left;
-  margin: 0 10px 5px 0;
-  max-width: 70px;
-  transition: all 0.2s ease-in-out;
-}
-.img-design {
-    background: green;
-    border-radius: 50%;
-    padding: 5px;
-}
-.single-testimonal p{
-  font-size: 90%;
-  padding: 0;
-  margin: 0 0 0px 0;
-}
-.test-text h1{
-    position: relative;
-    margin: -2px  5px;
-    padding: 6px 0 8px 0;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 11px;
-}
-.test-text:before {
-    position: absolute;
-    bottom: 9px;
-    left: 19px;
-    z-index: 0;
-    width: 0;
-    height: 0;
-    border-width: 20px 0 0 23px;
-    border-style: solid;
-    border-color: #DADADA transparent transparent transparent;
-    content: "";
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-}
-.test-text:after {
-    position: absolute;
-    right: 19px;
-    bottom: 9px;
-    z-index: 0;
-    width: 0;
-    height: 0;
-    border-width: 20px 23px 0 0;
-    border-style: solid;
-    border-color: #DADADA transparent transparent transparent;
-    content: "";
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-}
-.owl-prev{
-  position: absolute;
-  left: -20px;
-  top: 100px;
-  display:none;
-}
-.owl-next{
-  position: absolute;
-  left: -20px;
-  top: 100px;
-  display:none;
-}
 /*Get Solution*/
 .userproposal-header {
     text-align: center;
     color: black;
 }
-.userproposal-body {
-    margin-top: -5px;
+/*Login*/
+#login .container #login-row #login-column #login-box {
+  margin-top: 120px;
+  max-width: 600px;
+  height: 320px;
+  padding: 30px;
 }
-.hello {
-    box-shadow: 0 2px 5px 0 #E20725;
+#login .container #login-row #login-column #login-box #login-form {
+  padding: 20px;
 }
-.hel {
-    text-align: center;
-}
-.texthoo {
-    margin: 20px;
+#login .container #login-row #login-column #login-box #login-form #register-link {
+  margin-top: -85px;
 }
