--- a/airline/css/style.css
+++ b/airline/css/style.css
@@ -810,3 +810,38 @@ body.mobile-nav-active #mobile-nav-toggle {
 #login .container #login-row #login-column #login-box #login-form #register-link {
   margin-top: -85px;
 }
+.profile-design {
+  padding: 20px;
+  width: 600px;
+  margin: 20px auto;
+ -webkit-box-shadow: -6px 10px 26px 12px rgba(0,0,0,0.75);
+-moz-box-shadow: -6px 10px 26px 12px rgba(0,0,0,0.75);
+box-shadow: -6px 10px 26px 12px rgba(0,0,0,0.75);
+   background-color: white;
+   border-radius: 20px;
+}
+.profile-underline{
+  border-bottom:1px solid black;  
+}
+.main_page {
+  background-color: #ffffff;
+  height: 300px;
+  background-repeat: none;
+}
+
+.main_page a {
+  display: inline-block;
+  background: #151FF4;
+  max-width: 400px;
+  min-width: 300px;
+  padding: 20px;
+  color: white;
+  font-size: 1em;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.main_page a:hover {
+  background: white;
+  color: black;
+}
